<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/add_assets_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/btn_add_assets_detail_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_return_black"
            android:background="@color/white"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/return_str" />
        <TextView
            android:id="@+id/title_add_assets_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_assets"
            android:textSize="20sp"
            android:gravity="center"
            tools:ignore="RelativeOverlap"
            android:layout_centerInParent="true"/>

        <Button
            android:id="@+id/btn_add_assets_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_alignParentEnd="true"
            android:background="@color/white"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jine"
            style="@style/add_assets_detail"/>
        <EditText
            android:id="@+id/input_add_assets_invest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_0_00"
            android:textAlignment="textEnd"
            android:background="@null"
            android:inputType="number"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/add_assets_detail"/>
        <EditText
            android:id="@+id/input_add_assets_demo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_content"
            android:textAlignment="textEnd"
            android:background="@null"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>


</LinearLayout>