<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:orientation="vertical"
        android:background="@color/white"
        tools:context=".view.activity.AddFinancialAssetsActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/btn_add_financial_assets_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_return_black"
            android:background="@color/white"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/return_str" />
        <TextView
            android:id="@+id/title_add_assets_financial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/self_defined"
            android:textSize="20sp"
            android:gravity="center"
            tools:ignore="RelativeOverlap"
            android:layout_centerInParent="true"/>

        <Button
            android:id="@+id/btn_add_financial_assets_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_alignParentEnd="true"
            android:background="@color/white"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jine"
            style="@style/add_assets_detail"/>
        <EditText
            android:id="@+id/input_amount_add_financial_card_assets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_0_00"
            android:textAlignment="textEnd"
            android:background="@null"
            android:inputType="numberDecimal|numberSigned"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_bank"
            style="@style/add_assets_detail"/>
        <TextView
            android:id="@+id/btn_choose_bank_add_financial_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_bank"
            android:textAlignment="textEnd"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            style="@style/add_assets_detail"/>
        <EditText
            android:id="@+id/input_note_add_financial_card_assets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_0_00"
            android:textAlignment="textEnd"
            android:background="@null"
            android:inputType="numberDecimal|numberSigned"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>
</LinearLayout>