<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".view.activity.AddAssetsActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white">
        
        <ImageButton
            android:id="@+id/btn_add_assets_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_return_black"
            android:background="@color/white"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/return_str" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_assets"
            android:textSize="20sp"
            android:gravity="center"
            tools:ignore="RelativeOverlap"
            android:layout_centerInParent="true"/>

        <Button
            android:id="@+id/btn_add_assets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom"
            android:layout_alignParentEnd="true"
            android:background="@color/white"
            android:textColor="@color/colorPrimary"
            tools:ignore="RelativeOverlap"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:src="@mipmap/icon_search"/>
        <EditText
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_search"/>



<!--        <SearchView-->
<!--            android:id="@+id/search_view"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:queryHint="@string/please_input_content"-->
<!--            android:iconifiedByDefault="false"-->
<!--            android:gravity="center"-->
<!--            android:background="@color/gray6"-->
<!--            android:layout_margin="5dp"/>-->
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/add_assets_common_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <ListView
                android:id="@+id/add_assets_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>