<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".view.fragment.AccountBookFragment">

    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/this_month_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spending_this_month"
            android:textSize="15dp"
            />
        <TextView
            android:id="@+id/this_month_outcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-0.00"
            android:layout_marginTop="10dp"
            android:textSize="30dp"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <ImageButton
        android:id="@+id/this_month_btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_out_in"
        android:layout_alignParentRight="true"
        android:layout_marginTop="80dp"
        android:layout_marginRight="15dp"
        android:src="@mipmap/btn_calculate_expenditure"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_month_the_income"
            android:textSize="15dp"
            />
        <TextView
            android:id="@+id/this_month_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+0.00"
            android:layout_marginTop="10dp"
            android:textSize="30dp"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <ImageButton
        android:id="@+id/this_month_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/bg_out_in"
        android:layout_marginTop="160dp"
        android:layout_marginRight="15dp"
        android:src="@mipmap/btn_calculate_income"
        />

    <LinearLayout
        android:id="@+id/billdetail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="240dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textSize="15dp"
            android:text="账单明细   近3笔" />
        <TextView
            android:id="@+id/btn_account_more"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:textAlignment="textEnd"
            android:drawableRight="@mipmap/icon_nav_more"
            android:text="更多"
            android:textSize="15dp"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <ListView
        android:id="@+id/account_book_recycleview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="280dp"
        tools:listitem="@layout/fragment_account_item"/>
    <!--    <ListView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="90dp"-->
<!--        android:layout_marginTop="260dp"-->
<!--        android:scrollbars="none"-->
<!--        tools:listitem="@layout/fragment_account_item"-->
<!--        />-->
</RelativeLayout>

