<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray6"
        tools:context=".view.fragment.AssetsFragment">

    <com.thread0.bookkeeping.view.layout.AssetsTitleBar
        android:id="@+id/assets_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:background="@color/white"/>
    <RelativeLayout
        android:id="@+id/net_worth_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/assets_title_bar"
        tools:ignore="MissingConstraints,UseCompoundDrawables">

        <ImageView
            android:id="@+id/assets_net_worth"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/icon_assets_assets"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="16dp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/group_list_item_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_toEndOf="@id/assets_net_worth"
            android:text="@string/net_worth"/>


        <TextView
            android:id="@+id/assets_net_worth_amount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toStartOf="@id/btn_assets_blind"
            android:gravity="center"
            android:layout_marginEnd="8dp"
            android:text="@string/_0_00"/>
        <ImageView
            android:id="@+id/btn_assets_blind"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/icon_assets_blind"
            android:scaleX="-1"
            android:alpha="0.5"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"/>


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="84dp"
        app:layout_constraintTop_toBottomOf="@id/net_worth_layout"
        >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/assets_rec_view_crash"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/white"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/assets_rec_view_financial"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/white"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/assets_rec_view_credit"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/white"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/assets_rec_view_creditor"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/white"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/assets_rec_view_virtual"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/white"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/assets_rec_view_investment"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/white"/>

            <RelativeLayout
                android:id="@+id/add_assets_btn_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_add_assets"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:text="@string/add_assets"
                    android:gravity="center"
                    android:background="@null"
                    app:drawableStartCompat="@mipmap/icon_nav_add" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>